# masters

./: .gitignore  pipeline.c  pipeline_2.c  pipeline_3.c
mpi/: pipeline_1.c  pipeline_2.c
mpi_masterslave_raytracing/: README.md  explicit  explicit.cpp  main.cpp
mpi_masterslave_sort/: main.c
ppe/: a.out  dot_product_stream.cpp  dot_product_stream.pipelined.cpp  dps  inputA.txt  inputB.txt
ppe/AL1/mandel/: Makefile  README.md  benchmark-runner.py  benchmark_map.csv  benchmark_results.csv  benchmark_results2.csv  mandel.cpp  mandel_map.cpp  mandel_pipeline.cpp  mandel_pipeline_with_farm.cpp  mandel_pipeline_with_farm_map.cpp  mandel_pipeline_with_map.cpp  map  pipeline  pipeline_with_farm  pipeline_with_farm_map  pipeline_with_map  raw_report.txt  reinterpret-results-stdev.py  reinterpret-results.py  reinterpreted-results.csv  reinterpreted-stdev.csv  seq
ppe/cpp_threads/: CMakeLists.txt  main.cpp  mandel_pipeline_farm.cpp  map
ppe/cpp_threads/parallel/: DynamicParallelFor.cpp  Pipeline.cpp  StaticParallelFor.cpp  StaticParallelFor.h  dalvan_queue.cpp
ppe/msvc_threads/msvc_threads/: msvc_threads.sln
ppe/seminario_tpl/SeminarioTPL/: IImageDrawing.cs  IMandelbrot.cs  ImageDrawer.cs  NoopDrawing.cs  PLinqMandelbrot.cs  PLinqMandelbrotOuter.cs  ParallelForMandelbrot.cs  Parameters.cs  Runner.cs  (+5 more)
tacc_openmpi/: CMakeLists.txt
tacc_openmpi/mpi/: pipeline  pipeline_3.c
tacc_openmpi/mpi_masterslave_raytracing/: README.md  a.out  explicit  explicit.cpp  explicit_raytracer  out2.txt  out3.txt  raytracer
tacc_openmpi/mpi_masterslave_sort/: CMakeLists.txt  main.c
(+3 files in other folders)
